--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,9 +9,20 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
+  <header>
+    <nav>
+      <ul>
+        <li><a href='/drones/{{this._id}}'>Show drones</a></li>
+      </ul>
+    </nav>
+
+  </header>
+
   <body>
 
     {{{body}}}
+
+    <a href='/drones/{{this._id}}'>Show drones</a>
 
     <script src="/js/script.js"></script>
   </body>
