--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -1,1 +1,15 @@
 <h2>Available drones</h2>
+
+<div class="drone-container">
+{{#each drones}}
+    <div class="drone">
+      <h3><strong>Name:</strong>{{this.name}}</h3>
+      <p><strong>Propellers:</strong> {{ this.propellers }}</p>
+      <p><strong>Max Speed:</strong> {{ this.maxSpeed }} km/h</p>
+      <a href="/drones/{{_id}}/edit">Edit drone</a>
+      <form method="POST" action="/drones/{{_id}}/delete">
+        <button type="submit">Delete</button>
+      </form>
+    </div>
+{{/each}}
+</div>
