--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,9 @@
   <header>
     <nav>
       <ul>
-        <li><a href='/drones/{{this._id}}'>Show drones</a></li>
+        <li><a href='/'> Home</a></li>
+        <li><a href='/drones/{{this._id}}'> Show drones</a></li>
+        <li><a href='/drones/create{{this._id}}'> Create a drone</a></li>
       </ul>
     </nav>
 
@@ -21,9 +23,6 @@
   <body>
 
     {{{body}}}
-
-    <a href='/drones/{{this._id}}'>Show drones</a>
-
     <script src="/js/script.js"></script>
   </body>
 
