--- a/views/drones/list.hbs
+++ b/views/drones/list.hbs
@@ -2,13 +2,14 @@
 
 <div class="drone-container">
 {{#each drones}}
-    <div class="drone">
-      <h3><strong>Name:</strong>{{this.name}}</h3>
-      <p><strong>Propellers:</strong> {{ this.propellers }}</p>
-      <p><strong>Max Speed:</strong> {{ this.maxSpeed }} km/h</p>
-      <a href="/drones/{{_id}}/edit">Edit drone</a>
+    <div class="drone-info">
+      <h3>Name: {{this.name}}</h3>
+      <p>Propellers: {{ this.propellers }}</p>
+      <p>Max Speed: {{ this.maxSpeed }} km/h</p>
+      <p>ID: {{ this.id }}</p>
+      <a href="/drones/{{_id}}/edit"> Edit drone</a>
       <form method="POST" action="/drones/{{_id}}/delete">
-        <button type="submit">Delete</button>
+        <button type="submit"> Delete</button>
       </form>
     </div>
 {{/each}}
