--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,1 +1,14 @@
 <h2>Update the drone</h2>
+
+<form method='POST' action='/edit/{{_id}}' >
+  <label for='name'>name</label>
+  <input type='text' name='name' value='{{name}}' />
+
+  <label for='propellers'>propellers</label>
+  <input type='number' name='propellers' value='{{propellers}}' />
+
+  <label for='maxSpeed'>maxSpeed</label>
+  <input type='number' name='maxSpeed' value='{{maxSpeed}}' />
+
+  <button type='submit'>Update info</button>
+</form>
