--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,7 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="text-intro">
+    <h1>{{title}}</h1>
+    <p class="intro">Welcome to {{title}}</p>
+</div>
+
+<img class="drone-picture" src="/images/david-henrichs-72AYEEBJpz4-unsplash.jpg">
+
