--- a/views/drones/update-form.hbs
+++ b/views/drones/update-form.hbs
@@ -1,6 +1,6 @@
 <h2>Update the drone</h2>
 
-<form method='POST' action='/edit/{{ _id }}' >
+<form method='POST' action='/drones/{{ _id }}/edit' >
   <label for='name'>name</label>
   <input type='text' name='name' value='{{name}}' />
 
