--- a/views/drones/create-form.hbs
+++ b/views/drones/create-form.hbs
@@ -1,13 +1,16 @@
 <h2>Create a new drone</h2>
-<form action='/drones/create' method='post'>
-  <label for='name'>name</label>
-  <input type='text' name='name' id='name' />
+<div class="create-form">
+  <form action='/drones/create' method='post'>
+    <label for='name'>Drone name</label>
+    <input type='text' name='name' id='name' />
 
-  <label for='propellers'>propellers</label>
-  <input type='number' name='propellers' id='propellers' />
+    <label for='propellers'>Propellers</label>
+    <input type='number' name='propellers' id='propellers' />
 
-  <label for='maxSpeed'>maxSpeed</label>
-  <input type='number' name='maxSpeed' id='maxSpeed' />
+    <label for='maxSpeed'>Max Speed</label>
+    <input type='number' name='maxSpeed' id='maxSpeed' />
 
-  <button type='submit'>Add a new drone!</button>
-</form>
+    <button type='submit' class="but-list">Add a new drone!</button>
+  </form>
+
+</div>
